samples/_failures_safe/1761248350_548f99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a615148b.c: In function ‘main’:
./samples/SAFE/__tmp_a615148b.c:167:16: error: missing terminating " character
  167 |         printf("Token
      |                ^~~~~~
./samples/SAFE/__tmp_a615148b.c:167:9: error: expected expression at end of input
  167 |         printf("Token
      |         ^~~~~~
./samples/SAFE/__tmp_a615148b.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a615148b.c:167:9: error: expected declaration or statement at end of input
